Full UI and architecture redo
