# app/controllers/api/beam_deflection_items_controller.rb
@@ -7,8 +7,12 @@ module Api
     def update_item
       beam_id = params.require(:beam_id)
       item = @beam_deflection.beam_deflection_beams.find_or_initialize_by(beam_id: beam_id)
-      attrs = params.require(:beam_deflection_beam).permit(:quantity, :position, :deflection_mm)
+      attrs = params.require(:beam_deflection_beam).permit(:quantity, :position, :length_m, :udl_kn_m)
       if item.update(attrs)
+        if attrs.key?(:length_m) || attrs.key?(:udl_kn_m)
+          item.update_column(:deflection_mm, nil)
+          @beam_deflection.update_columns(result_deflection_mm: nil, within_norm: nil, calculated_at: nil)
+        end
         render json: item
       else
         render_error(item.errors.full_messages, :unprocessable_entity)
