# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_11_27_111946) do
+ActiveRecord::Schema[8.0].define(version: 2025_12_15_000100) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -20,8 +20,6 @@ ActiveRecord::Schema[8.0].define(version: 2025_11_27_111946) do
     t.bigint "moderator_id"
     t.datetime "formed_at"
     t.datetime "completed_at"
-    t.decimal "length_m", precision: 8, scale: 3
-    t.decimal "udl_kn_m", precision: 8, scale: 3
     t.decimal "deflection_mm", precision: 10, scale: 3
     t.boolean "within_norm"
     t.text "note"
@@ -35,9 +33,7 @@ ActiveRecord::Schema[8.0].define(version: 2025_11_27_111946) do
     t.index ["moderator_id"], name: "index_beam_deflections_on_moderator_id"
     t.index ["status", "creator_id"], name: "index_beam_deflections_on_status_and_creator_id"
     t.index ["status"], name: "index_beam_deflections_on_status"
-    t.check_constraint "length_m > 0::numeric", name: "check_length_positive"
     t.check_constraint "status::text = ANY (ARRAY['draft'::character varying::text, 'deleted'::character varying::text, 'formed'::character varying::text, 'completed'::character varying::text, 'rejected'::character varying::text])", name: "check_status"
-    t.check_constraint "udl_kn_m >= 0::numeric", name: "check_udl_non_negative"
   end
 
   create_table "beam_deflections_beams", force: :cascade do |t|
@@ -50,11 +46,15 @@ ActiveRecord::Schema[8.0].define(version: 2025_11_27_111946) do
     t.datetime "updated_at", null: false
     t.boolean "is_primary", default: false, null: false
     t.decimal "deflection_mm", precision: 18, scale: 6
+    t.decimal "length_m", precision: 8, scale: 3
+    t.decimal "udl_kn_m", precision: 8, scale: 3
     t.index ["beam_deflection_id", "beam_id"], name: "idx_requests_services_unique", unique: true
     t.index ["beam_deflection_id", "beam_id"], name: "index_beam_deflections_beams_on_beam_deflection_id_and_beam_id", unique: true
     t.index ["beam_deflection_id", "beam_id"], name: "index_requests_services_on_request_and_service", unique: true
     t.check_constraint "\"position\" > 0", name: "check_position_positive"
+    t.check_constraint "length_m > 0::numeric", name: "check_item_length_positive"
     t.check_constraint "quantity > 0", name: "check_quantity_positive"
+    t.check_constraint "udl_kn_m >= 0::numeric", name: "check_item_udl_non_negative"
   end
 
   create_table "beams", force: :cascade do |t|
